[BUGFIX] Remove z-index from .content-top
#4597

--- a/assets/css/easyadmin-theme/base.scss
+++ b/assets/css/easyadmin-theme/base.scss
@@ -286,6 +286,7 @@ body.ea-mobile-sidebar-visible .sidebar {
 .content-top {
     align-items: center;
     box-shadow: 0 1px 0 var(--content-top-border-color);
+    margin-bottom: 1px;
     padding: 5px 15px 5px var(--content-padding-left);
 
     @media(max-width: 992px) {
@@ -298,7 +299,6 @@ body.ea-mobile-sidebar-visible .sidebar {
         justify-content: space-between;
         padding: 11px calc(var(--lg-content-padding-right) + var(--resize-handler-width)) 11px var(--lg-content-padding-left);
         position: relative;
-        z-index: 2000; // must be higher than .content-header z-index
     }
 }
 
